# VSIM-EXAM

./: CMakeLists.txt  Input.h  Renderer.cpp  Renderer.h  SoundTester.cpp  SoundTester.h  TransformManager.cpp  TransformManager.h  TxtToObj.cpp  TxtToObj.h  Utilities.h  Vertex.h  camera.h  core.h  engineinit.cpp  engineinit.h  entityManager.h  logger.cpp  logger.h  macros.h  main.cpp  quadtree.cpp  quadtree.h  registry.h
Assets/: Viking_room_2.mtl
Components/: Components.h
Entities/: Entity.cpp  Entity.h
Python/: multiplefiles_downsampling.py
Python/las2/: lasdata2_downsample100.txt  lasdata2_downsample1000.txt  test2.laz
Python/las3/: test1.laz  test10.laz  test11.laz  test12.laz  test2.laz  test3.laz  test4.laz  test7.laz
Shaders/: CompileShaders.bat  PhongShader.frag  PhongShader.frag.spv  PhongShader.vert  PhongShader.vert.spv  TraceShader.vert  TraceShader.vert.spv
Systems/: CameraSystem.cpp  CameraSystem.h  FileSystem.cpp  FileSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  System.h  inputsystem.cpp  inputsystem.h
UI/: MainWindow.cpp  MainWindow.h  MainWindow.ui  widgetfile.ui
Widgets/: widgetfile.cpp  widgetfile.h  widgetsquareimage.cpp  widgetsquareimage.h
